# audio_book

./: .gitignore  README.md  instructions.md  packages.txt  pyproject.toml
app/: call_llm.py  default_speaker.py  extract_from_pdf.py  load_dataset.py  requirements.txt  scrape_with_sel.py  speech_generator.py
app/tts-env/: pyvenv.cfg
back_end/: README.md  instructions.md
back_end/app/: call_llm.py  copying_features_from_one_file_other.py  default_speaker.py  extract_from_pdf.py  final_audio_processing.py  processing_output.py  scrape.py  simple_scrapper.py  speech_generator.py  train_glowtts.py
front_end/: package-lock.json  package.json
front_end/src/: theme.ts
front_end/src/app/: page.tsx
