[tool.poetry]
name = "audio_book"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
pypdf2 = "^3.0.1"
streamlit = "^1.33.0"
tts = "^0.22.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
pypdf2 = "^3.0.1"
streamlit = "^1.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
